# zed-structurizr

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  TODOs.md  big-bank.dsl  extension.toml
big-bank-plc/: internet-banking-system.dsl  system-landscape.dsl
big-bank-plc/model/: people-and-software-systems.dsl
big-bank-plc/model/internet-banking-system/: details.dsl  summary.dsl
big-bank-plc/views/: styles-people.dsl
languages/structurizr/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  outline.scm  textobjects.scm
src/: lib.rs
