[package]
name = "zed-structurizr"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Rob Hand <146272+sinon@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/sinon/zed-structurizr"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
